[package]
name = "sawp"
version = "0.6.0"
authors = ["Canadian Centre for Cyber Security <sa-sawp@cyber.gc.ca>"]
description = "Security Aware Wire Protocol parsing library"
readme = "README.md"
edition = "2018"
license-file = "LICENSE"
repository = "https://github.com/CybercentreCanada/sawp"
homepage = "https://github.com/CybercentreCanada/sawp"
keywords = ["parser", "streaming", "protocols", "network", "api"]
categories = ["parsing", "network-programming"]
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/**/*.rs",
]

[workspace]
members = [
    "sawp-dns",
    "sawp-ffi",
    "sawp-ffi-derive",
    "sawp-modbus",
    "sawp-tftp",
    "sawp-file",
    "sawp-json",
    "sawp-diameter",
    "sawp-flags",
    "sawp-flags-derive",
    "sawp-gre",
]

[features]
ffi = ["cbindgen", "sawp-ffi"]
# Makes error messages more descriptive and verbose at the cost of allocating
# more strings
verbose = []

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]
bench = false

[build-dependencies]
cbindgen = {version = "0.15", optional = true}

[dev-dependencies]
criterion = "=0.3.4"

[dependencies]
sawp-ffi = { path = "sawp-ffi", version = "^0.6.0", optional = true}
nom = "5.1.2"

[[bench]]
name = "modbus"
path = "benches/modbus.rs"
harness = false
