[package]
name = "sawp"
version = "0.13.1"
authors = ["Canadian Centre for Cyber Security <sa-sawp@cyber.gc.ca>"]
description = "Security Aware Wire Protocol parsing library"
readme = "README.md"
edition = "2021"
license = "MIT"
repository = "https://github.com/CybercentreCanada/sawp"
homepage = "https://github.com/CybercentreCanada/sawp"
keywords = ["parser", "streaming", "protocols", "network", "api"]
categories = ["parsing", "network-programming"]
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/**/*.rs",
]

# Minimum supported rust version
rust-version = "1.63.0"

[workspace]
members = [
    "sawp-dns",
    "sawp-ffi",
    "sawp-ffi-derive",
    "sawp-modbus",
    "sawp-resp",
    "sawp-tftp",
    "sawp-file",
    "sawp-json",
    "sawp-diameter",
    "sawp-flags",
    "sawp-flags-derive",
    "sawp-gre",
    "sawp-pop3",
    "sawp-ike",
]

[features]
ffi = ["cbindgen", "sawp-ffi"]
# Makes error messages more descriptive and verbose at the cost of allocating
# more strings
verbose = []

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]
bench = false

[build-dependencies]
cbindgen = {version = "0.15", optional = true}

[dev-dependencies]
criterion = "=0.3.4"

[dependencies]
sawp-ffi = { path = "sawp-ffi", version = "^0.13.1", optional = true}
nom = "7.1.1"

[[bench]]
name = "modbus"
path = "benches/modbus.rs"
harness = false
