
[package]
name = "sawp-fuzz"
version = "0.0.0"
authors = ["Canadian Centre for Cyber Security <sa-sawp@cyber.gc.ca>"]
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.3"
sawp = { path = ".." }
sawp-modbus = { path = "../sawp-modbus" }
sawp-diameter = { path = "../sawp-diameter" }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_modbus"
path = "fuzz_targets/fuzz_modbus.rs"
test = false
doc = false

[[bin]]
name = "fuzz_diameter"
path = "fuzz_targets/fuzz_diameter.rs"
test = false
doc = false
