[package]
name = "sawp-diameter"
version = "0.1.1-rc.4"
authors = ["Canadian Centre for Cyber Security <sa-sawp@cyber.gc.ca>"]
description = "SAWP Protocol Parser for Diameter"
readme = "../README.md"
edition = "2018"
license-file = "../LICENSE"
repository = "https://github.com/CybercentreCanada/sawp"
homepage = "https://github.com/CybercentreCanada/sawp"
keywords = ["diameter", "parser", "protocol", "mobility", "core-network"]
categories = ["parsing", "network-programming"]
include = [
    "Cargo.toml",
    "../LICENSE",
    "../README.md",
    "src/**/*.rs",
]

[features]
ffi = ["cxx-build"]

[dependencies]
sawp = { path = "..", version = "0.1.1-rc.3" }
nom = "5.1.2"
cxx = "0.4"
num_enum = "0.5.1"

[dev-dependencies]
rstest = "0.6.4"

[build-dependencies]
cxx-build = {version = "0.4", optional = true}

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]
