[package]
name = "sawp-diameter"
version = "0.7.0"
authors = ["Canadian Centre for Cyber Security <sa-sawp@cyber.gc.ca>"]
description = "SAWP Protocol Parser for Diameter"
readme = "../README.md"
edition = "2018"
license-file = "../LICENSE"
repository = "https://github.com/CybercentreCanada/sawp"
homepage = "https://github.com/CybercentreCanada/sawp"
keywords = ["diameter", "parser", "protocol", "mobility", "core-network"]
categories = ["parsing", "network-programming"]
include = [
    "Cargo.toml",
    "../LICENSE",
    "../README.md",
    "src/**/*.rs",
]

[features]
verbose = ["sawp/verbose"]

[dependencies]
sawp = { path = "..", version = "^0.7.0"}
nom = "5.1.2"
num_enum = "0.5.1"
bitflags = "~1.2.1"

[dev-dependencies]
rstest = "0.6.4"

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]

# Override default replacements
[package.metadata.release]
pre-release-replacements = []
