[package]
name = "sawp-ffi-derive"
version = "0.13.1"
authors = ["Canadian Centre for Cyber Security <sa-sawp@cyber.gc.ca>"]
description = "Generate cbindgen compatible member accessors for structs and enums"
readme = "../README.md"
edition = "2021"
license = "MIT"
repository = "https://github.com/CybercentreCanada/sawp"
homepage = "https://github.com/CybercentreCanada/sawp"
keywords = ["ffi", "code-generation"]
categories = []
include = [
    "Cargo.toml",
    "../LICENSE",
    "../README.md",
    "src/**/*.rs",
]

[dependencies]
quote = "1.0"
syn = "1.0"
proc-macro-crate = "= 1.1.0"
proc-macro2 = "1.0.36"
heck = "0.3"

[dev-dependencies]
sawp-flags = { path = "../sawp-flags", version = "^0.13.1" }

[lib]
proc-macro = true

# Override default replacements
[package.metadata.release]
pre-release-replacements = []
