[package]
name = "sawp-ffi"
version = "0.5.0"
authors = ["Canadian Centre for Cyber Security <sa-sawp@cyber.gc.ca>"]
description = "FFI helper macros and traits"
readme = "../README.md"
license-file = "../LICENSE"
repository = "https://github.com/CybercentreCanada/sawp"
homepage = "https://github.com/CybercentreCanada/sawp"
keywords = ["ffi"]
categories = ["ffi"]
include = [
    "Cargo.toml",
    "../LICENSE",
    "../README.md",
    "src/**/*.rs",
]

[dependencies]
sawp-ffi-derive = { path = "../sawp-ffi-derive", version = "^0.5.0"}
sawp-flags = { path = "../sawp-flags", version = "^0.5.0"}

# Override default replacements
[package.metadata.release]
pre-release-replacements = []
