[package]
name = "sawp-ffi"
version = "0.13.1"
authors = ["Canadian Centre for Cyber Security <sa-sawp@cyber.gc.ca>"]
description = "FFI helper macros and traits"
readme = "../README.md"
edition = "2021"
license = "MIT"
repository = "https://github.com/CybercentreCanada/sawp"
homepage = "https://github.com/CybercentreCanada/sawp"
keywords = ["ffi"]
categories = []
include = [
    "Cargo.toml",
    "../LICENSE",
    "../README.md",
    "src/**/*.rs",
]

[dependencies]
sawp-ffi-derive = { path = "../sawp-ffi-derive", version = "^0.13.1" }
sawp-flags = { path = "../sawp-flags", version = "^0.13.1" }

# Override default replacements
[package.metadata.release]
pre-release-replacements = []
