[package]
name = "sawp-file"
version = "0.11.0"
authors = ["Canadian Centre for Cyber Security <sa-sawp@cyber.gc.ca>"]
description = "SAWP File Format"
readme = "../README.md"
edition = "2018"
license-file = "../LICENSE"
repository = "https://github.com/CybercentreCanada/sawp"
homepage = "https://github.com/CybercentreCanada/sawp"
keywords = ["parser", "protocols", "serialization"]
categories = ["parsing", "network-programming", "encoding"]
include = [
    "Cargo.toml",
    "../LICENSE",
    "../README.md",
    "src/**/*.rs",
]

[dependencies]
sawp = { path = "..", version = "^0.11.0" }
rmp-serde = "0.14.4"
serde = "1.0.116"
serde_derive = "1.0.116"

# TODO: rmp 0.8.11 is not compatible with our MSRV of 1.41.1
# remove this when we bump our MSRV
rmp = "=0.8.10"

# Override default replacements
[package.metadata.release]
pre-release-replacements = []
