[package]
name = "sawp-flags"
version = "0.13.1"
authors = ["Canadian Centre for Cyber Security <sa-sawp@cyber.gc.ca>"]
description = "SAWP BitFlags Handling and Storage"
readme = "../README.md"
edition = "2021"
license = "MIT"
repository = "https://github.com/CybercentreCanada/sawp"
homepage = "https://github.com/CybercentreCanada/sawp"
keywords = ["bitflags", "bit", "flags", "bitmask"]
include = [
    "Cargo.toml",
    "../LICENSE",
    "../README.md",
    "src/**/*.rs",
]

[dependencies]
sawp-flags-derive = { path = "../sawp-flags-derive", version = "^0.13.1" }

# Override default replacements
[package.metadata.release]
pre-release-replacements = []
