[package]
name = "sawp-ike"
version = "0.13.1"
authors = ["Canadian Centre for Cyber Security <sa-sawp@cyber.gc.ca>"]
description = "SAWP Protocol Parser for IKEv2"
readme = "../README.md"
edition = "2021"
license = "MIT"
repository = "https://github.com/CyberCentreCanada/sawp"
homepage = "https://github.com/CyberCentreCanada/sawp"
keywords = ["ike", "parser", "protocol",]
categories = ["parsing", "network-programming"]
include = [
    "Cargo.toml",
    "../LICENSE",
    "../README.md",
    "src/**/*.rs",
]

[features]
ffi = ["cbindgen", "sawp/ffi", "sawp-ffi"]
verbose = ["sawp/verbose"]

[build-dependencies]
cbindgen = {version = "0.15", optional = true}

[dependencies]
sawp-ffi = {path = "../sawp-ffi", version = "^0.13.1", optional = true}
sawp-flags = { path = "../sawp-flags", version = "^0.13.1" }
sawp = {path = "..", version = "^0.13.1" }
nom = "7.1.1"
num_enum = "0.5.1"
byteorder = "1.4.3"

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]

[dev-dependencies]
rstest = "0.6.4"

# Override default replacements
[package.metadata.release]
pre-release-replacements = []
