[package]
name = "sawp-json"
version = "0.1.1"
authors = ["Canadian Centre for Cyber Security <sa-sawp@cyber.gc.ca>"]
description = "SAWP Protocol Parser for Json"
readme = "../README.md"
edition = "2018"
license-file = "../LICENSE"
repository = "https://github.com/CybercentreCanada/sawp"
homepage = "https://github.com/CybercentreCanada/sawp"
keywords = ["json", "parser", "protocols"]
categories = ["parsing", "network-programming"]
include = [
    "Cargo.toml",
    "../LICENSE",
    "../README.md",
    "src/**/*.rs",
]

[features]
verbose = ["sawp/verbose"]

[dependencies]
sawp = { path = "..", version = "^0.1.1"}
serde = "1.0"
serde_json = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
criterion = "0.3"
rstest = "0.6"

[[bench]]
name = "json"
path = "benches/json.rs"
harness = false

# Override default replacements
[package.metadata.release]
pre-release-replacements = []
