[package]
name = "sawp-modbus"
version = "0.1.1"
authors = ["Canadian Centre for Cyber Security <sa-sawp@cyber.gc.ca>"]
description = "SAWP Protocol Parser for Modbus"
readme = "../README.md"
edition = "2018"
license-file = "../LICENSE"
repository = "https://github.com/CybercentreCanada/sawp"
homepage = "https://github.com/CybercentreCanada/sawp"
keywords = ["modbus", "parser", "protocol", "hardware", "automation"]
categories = ["parsing", "network-programming"]
include = [
    "Cargo.toml",
    "../LICENSE",
    "../README.md",
    "src/**/*.rs",
]

[features]
ffi = ["cbindgen", "sawp/ffi", "sawp-ffi"]
# Prevent --all-features from requiring nightly
# Headers will only be generated when "ffi" is explicitly specified
# and "no-headers" isn't, since generating headers with cbindgen
# and macros requires nightly
no-headers = []

[build-dependencies]
cbindgen = {version = "0.15", optional = true}

[dependencies]
sawp-ffi = { path = "../sawp-ffi", optional = true}
sawp = { path = "..", version = "^0.1.1"}
nom = "5.1.2"
num_enum = "0.5.1"
bitflags = "1.0.4"

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]

[dev-dependencies]
rstest = "0.6.4"

# Override default replacements
[package.metadata.release]
pre-release-replacements = [
  {file="../README.md", search="sawp-modbus = .*", replace="sawp-modbus = \"{{version}}\""},
]
