[package]
name = "sawp-modbus"
version = "0.8.0"
authors = ["Canadian Centre for Cyber Security <sa-sawp@cyber.gc.ca>"]
description = "SAWP Protocol Parser for Modbus"
readme = "../README.md"
edition = "2018"
license = "MIT"
license-file = "../LICENSE"
repository = "https://github.com/CybercentreCanada/sawp"
homepage = "https://github.com/CybercentreCanada/sawp"
keywords = ["modbus", "parser", "protocol", "hardware", "automation"]
categories = ["parsing", "network-programming"]
include = [
    "Cargo.toml",
    "../LICENSE",
    "../README.md",
    "src/**/*.rs",
]

[features]
ffi = ["cbindgen", "sawp/ffi", "sawp-ffi"]
verbose = ["sawp/verbose"]

[build-dependencies]
cbindgen = {version = "0.15", optional = true}

[dependencies]
sawp-ffi = { path = "../sawp-ffi", version = "^0.8.0", optional = true}
sawp-flags = { path = "../sawp-flags", version = "^0.8.0"}
sawp = { path = "..", version = "^0.8.0"}
nom = "5.1.2"
num_enum = "0.5.1"

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]

[dev-dependencies]
rstest = "0.6.4"

# Override default replacements
[package.metadata.release]
pre-release-replacements = [
  {file="../README.md", search="sawp-modbus = .*", replace="sawp-modbus = \"{{version}}\""},
]
