[package]
name = "sawp-tftp"
version = "0.2.0"
authors = ["Canadian Centre for Cyber Security <sa-sawp@cyber.gc.ca>"]
description = "SAWP Protocol Parser for TFTP"
readme = "../README.md"
edition = "2018"
license-file = "../LICENSE"
repository = "https://github.com/CybercentreCanada/sawp"
homepage = "https://github.com/CybercentreCanada/sawp"
keywords = ["tftp", "parser", "protocol", "hardware", "automation"]
categories = ["parsing", "network-programming"]
include = [
    "Cargo.toml",
    "../LICENSE",
    "../README.md",
    "src/**/*.rs",
]

[dependencies]
sawp = { path = "..", version = "0.2.0" }
nom = "5.1.2"
num_enum = "0.5.1"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dev-dependencies]
rstest = "0.6.4"

# Override default replacements
[package.metadata.release]
pre-release-replacements = []
